--- a/templates/thumbor.conf.j2
+++ b/templates/thumbor.conf.j2
@@ -101,12 +101,12 @@ S3_LOADER_BUCKET = '{{thumbor_aws_loader_bucket}}'
 ## The file storage thumbor should use to store original images. This must be the
 ## full name of a python module (python must be able to import it)
 ## Defaults to: thumbor.storages.file_storage
-#STORAGE = 'thumbor.storages.file_storage'
+STORAGE = '{{thumbor_storage}}'
 
 ## The result storage thumbor should use to store generated images. This must be
 ## the full name of a python module (python must be able to import it)
 ## Defaults to: None
-#RESULT_STORAGE = None
+RESULT_STORAGE = '{{thumbor_results_storage}}'
 
 ## The imaging engine thumbor should use to perform image operations. This must
 ## be the full name of a python module (python must be able to import it)
