--- a/templates/thumbor.conf.j2
+++ b/templates/thumbor.conf.j2
@@ -106,7 +106,7 @@ STORAGE = '{{thumbor_storage}}'
 ## The result storage thumbor should use to store generated images. This must be
 ## the full name of a python module (python must be able to import it)
 ## Defaults to: None
-RESULT_STORAGE = '{{thumbor_results_storage}}'
+RESULT_STORAGE = '{{thumbor_result_storage}}'
 
 ## The imaging engine thumbor should use to perform image operations. This must
 ## be the full name of a python module (python must be able to import it)
